--- a/one/index.html
+++ b/one/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="/js/three.js"></script>
+    <script src="/js/utils.js"></script>
     <script src="/one/one.js"></script>
   </body>
 </html>
