--- a/five/index.html
+++ b/five/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="/js/three.js"></script>
+    <script src="/js/fx_parallax.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/five/five.js"></script>
   </body>
