--- a/six/index.html
+++ b/six/index.html
@@ -8,6 +8,13 @@
   <body>
     <script src="/js/three.js"></script>
     <script src="/js/utils.js"></script>
+    <script src="/js/shader_copy.js"></script>
+    <script src="/js/shader_glitch.js"></script>
+    <script src="/js/fx_composer.js"></script>
+    <script src="/js/render_pass.js"></script>
+    <script src="/js/mask_pass.js"></script>
+    <script src="/js/shader_pass.js"></script>
+    <script src="/js/glitch_pass.js"></script>
     <script src="/six/six.js"></script>
   </body>
 </html>
